--- a/configs/config_vocab_1k.yaml
+++ b/configs/config_vocab_1k.yaml
@@ -1,23 +1,21 @@
-# Knowledge distillation training example
+# Configuration with small vocabulary size (1k tokens)
 
 dataset:
   h5_file: data/data.h5
   features_h5: data/features.h5
   csv_file: data/labels.csv
   vocab: vocab.txt
+  vocab_size: 1000
 
 checkpoints:
   dir: checkpoints
-  teacher_ckpt: checkpoints/teacher.pt
 
 model:
   arch: stgcn
 
 hyperparameters:
-  distillation: true
   epochs: 10
   batch_size: 4
   seq_len: 16
   max_seq_len: 128
   learning_rate: 0.001
-  aux_loss_weight: 0.1
